--- a/org.jrebirth.af/archetype/src/main/resources/archetype-resources/pom.xml
+++ b/org.jrebirth.af/archetype/src/main/resources/archetype-resources/pom.xml
@@ -81,10 +81,9 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.1</version>
+					<version>3.12.1</version>
 					<configuration>
-						<source>1.8</source>
-						<target>1.8</target>
+						<release>21</release>
 						<encoding>UTF-8</encoding>
 					</configuration>
 				</plugin>
