--- a/org.jrebirth.af/pom.xml
+++ b/org.jrebirth.af/pom.xml
@@ -34,7 +34,8 @@
 
 		<maven.version>3.9.5</maven.version>
 
-		<openjfx.version>21.0.3-ea+1</openjfx.version>
+		<releaseVersion>21</releaseVersion>
+		<openjfx.version>21.0.1</openjfx.version>
 
 		<surefire.version>3.2.5</surefire.version>
 		<slf4j.version>2.0.10</slf4j.version>
@@ -140,8 +141,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>21</source>
-					<target>21</target>
+					<release>${releaseVersion}</release>
 				</configuration>
 			</plugin>
 
